# imageEditor

./: README.md
imageProcessing_client/: CMakeLists.txt  RegisterServer.reg  Window.rc  build.bat  window.cpp
imageProcessing_client/includes/: combinedHeader.h  globals.h  helpers.h  window.h
imageProcessing_client/src/: dialog_about.cpp  dialog_edit.cpp  dialog_register.cpp  helpers.cpp  image_filter.cpp
imageProcessing_inner/: CMakeLists.txt  build.bat  imageProcessingInnerComponent.cpp  imageProcessingInnerComponent.def  imageProcessingInnerComponent.reg
imageProcessing_inner/ForOuter/: imageProcessingInnerComponent.h
imageProcessing_outer/: CMakeLists.txt  build.bat  imageProcessingOuterComponent.cpp  imageProcessingOuterComponent.def  imageProcessingOuterComponent.reg
imageProcessing_outer/ForClient/: imageProcessingOuterComponent.h
